crates/ark/src/lsp/snapshots/ark__lsp__statement_range__tests__statement_range_serde_json_rejection-2.snap
---
source: crates/ark/src/lsp/statement_range.rs
expression: "serde_json::to_string_pretty(&rejection).unwrap()"
---
{
  "kind": "rejection",
  "rejectionKind": "syntax",
  "line": 12
}
