crates/ark/src/lsp/snapshots/ark__lsp__statement_range__tests__statement_range_serde_json_success.snap
---
source: crates/ark/src/lsp/statement_range.rs
expression: "serde_json::to_string_pretty(&success).unwrap()"
---
{
  "kind": "success",
  "range": {
    "start": {
      "line": 5,
      "character": 3
    },
    "end": {
      "line": 6,
      "character": 4
    }
  },
  "code": null
}
